# SportsGameAPI

./: .gitignore  api_client.py  apify_client.py  apify_runner.py  app.py  config_env.py  connectivity.py  debug_raw_sportsbet.py  debug_time_match.py  features.py  league_defaults.py  league_map.py  main.py  mapper.py  odds_extract.py  odds_fetch.py  odds_math.py  pipeline.py  pyproject.toml  replit.md  sportsbet_odds.py  stats_provider.py  store.py  test_apify_odds.py  test_apify_sportsbet.py  test_stats_provider.py  time_utils.py  ui_helpers.py  value_engine.py
.streamlit/: config.toml
archived/: main.py  test_apify_sportsbet.py  test_stats_provider.py
attached_assets/: Pasted-1-Add-an-AU-odds-provider-using-the-Sportsbet-actor-Can_1771051294081.txt  Pasted-1-apify-client-py-hardened-Key-changes-Uses-a-requests-_1771047569967.txt  Pasted-2-stats-provider-py-hardened-cached-clearer-diagnostics_1771047615982.txt  Pasted-2026-02-15T01-54-25-560Z-ACTOR-Pulling-container-image-_1771120594903.txt  Pasted-A-Odds-side-is-failing-hard-You-re-getting-Apify-400-Ba_1771049486312.txt  Pasted-ALL-SPORTS-API-Football-Soccer-API-Version-2-1-Welcome-_1770948130368.txt  Pasted-Below-is-a-repeatable-pattern-you-can-follow-for-any-ne_1771047963967.txt  Pasted-Goal-Before-you-run-odds-Elo-matching-do-a-fast-availab_1771205370207.txt  Pasted-Good-that-methodology-is-solid-and-the-limitations-you-_1771127796155.txt  Pasted-Great-Step-4A-is-the-right-move-We-ll-persist-tuned-Elo_1771215329637.txt  Pasted-Great-that-s-Option-A-fully-operational-now-production-_1771041632810.txt  (+35 more)
